--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,19 @@
 
 <body>
 
-Servlet Demo
+<form action="StudentServlet" method="GET">
+
+	First name: <input type="text" name="firstName" /> 
+	
+	<br/><br/>
+	
+	Last name: <input type="text" name="lastName" />
+
+	<br/><br/>
+
+	<input type="submit" value="Submit" />
+		
+</form>
 
 </body>
 
