try to add command by server

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,12 +4,8 @@
 
 <form action="StudentServlet" method="GET">
 
-	First name: <input type="text" name="firstName" /> 
+	Type your command: <input type="text" name="command" />
 	
-	<br/><br/>
-	
-	Last name: <input type="text" name="lastName" />
-
 	<br/><br/>
 
 	<input type="submit" value="Submit" />
