change server file name

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 
 <body>
 
-<form action="StudentServlet" method="GET">
+<form action="PlayerViewer" method="GET">
 
 	Type your command: <input type="text" name="command" />
 	
