--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,16 +4,29 @@
 
 <form action="StudentServlet" method="GET">
 
-	Type your command: <input type="text" name="command" />
-	
-	<br/><br/>
+    Type your command: <input type="text" name="command"/>
 
-	<input type="submit" value="Submit" />
+    <br/><br/>
 
-	<p>try4</p>
-		
+    <input type="submit" value="Submit"/>
+
+    <p>try4</p>
+
 </form>
-
+<script>
+    const launch = () => {
+       //first do the servlet DB stuff
+       jQuery.ajax({
+         type:"GET",
+         url : "StudentServlet",
+         data : param,
+         success : function(data) {
+            $('p').text('success')
+         }
+       });
+    };
+    launch();
+</script>
 </body>
 
 </html>
