change servers files

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,9 +2,9 @@
 
 <body>
 
-<form action="StudentServlet" method="GET">
+<form action="MenuServer" method="GET">
 
-    Type your command: <input type="text" name="command"/>
+    Choose map: <input type="text" name="command"/>
 
     <br/><br/>
 
