revert to 34a0184368a6ec86a7ec8a2c4df34b3db7487147 commit to try

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,9 +2,9 @@
 
 <body>
 
-<form action="MenuServer" method="GET">
+<form action="StudentServlet" method="GET">
 
-    Choose map: <input type="text" name="command"/>
+    Type your command: <input type="text" name="command"/>
 
     <br/><br/>
 
@@ -13,6 +13,20 @@
     <p>try4</p>
 
 </form>
+<script>
+    const launch = () => {
+       //first do the servlet DB stuff
+       jQuery.ajax({
+         type:"GET",
+         url : "StudentServlet",
+         data : {command: "l"},
+         success : function(data) {
+            $('p').text('success')
+         }
+       });
+    };
+    launch();
+</script>
 </body>
 
 </html>
