--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 
 <body>
 
-<form action="cleint" method="GET">
+<form action="Cleint" method="GET">
 
     Choose map: <input type="text" name="command"/>
 
