check of the map works fine

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 
 <body>
 
-<form action="Cleint" method="GET">
+<form action="Client" method="GET">
 
     Choose map: <input type="text" name="command"/>
 
